Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -25,11 +25,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.55\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here "
+    "# Your solution here\n",
+    "bag1 = .5\n",
+    "bag1_black = .4\n",
+    "bag2 = .5\n",
+    "bag2_black = .7\n",
+    "print(bag1*bag1_black+bag2*bag2_black)"
    ]
   },
   {
@@ -61,14 +74,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'marbles': array(['white', 'black'], dtype='<U5'),\n",
+       "  'probs': array([0.6, 0.4])},\n",
+       " {'marbles': array(['white', 'black'], dtype='<U5'),\n",
+       "  'probs': array([0.3, 0.7])},\n",
+       " {'bags': array([{'marbles': array(['white', 'black'], dtype='<U5'), 'probs': array([0.6, 0.4])},\n",
+       "         {'marbles': array(['white', 'black'], dtype='<U5'), 'probs': array([0.3, 0.7])}],\n",
+       "        dtype=object), 'probs': array([0.5, 0.5])})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "bag1 = None\n",
-    "bag2 = None\n",
-    "box  = None\n",
+    "bag1 = {'marbles': np.array(['white','black']), 'probs': np.array([.6,.4])}\n",
+    "bag2 = {'marbles': np.array(['white','black']), 'probs': np.array([.3,.7])}\n",
+    "box  = {'bags': np.array([bag1,bag2]), 'probs': np.array([.5,.5])}\n",
     "\n",
     "bag1, bag2, box\n",
     "\n",
@@ -92,17 +122,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'white'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sample_marble(box):\n",
     "    # randomly choose a bag \n",
-    "   \n",
+    "    draw_bag = np.random.random()\n",
+    "    sample_bag = []\n",
+    "    if draw_bag > box['probs'][0]:\n",
+    "        sample_bag = box['bags'][0]\n",
+    "    else:\n",
+    "        sample_bag = box['bags'][1]\n",
     "    # randomly choose a marble \n",
-    "    return none\n",
+    "    draw_marble = np.random.random()\n",
+    "    if draw_marble > sample_bag['probs'][0]:\n",
+    "        sample_marble = sample_bag['marbles'][0]\n",
+    "    else:\n",
+    "        sample_marble = sample_bag['marbles'][1]\n",
+    "    return sample_marble\n",
     "\n",
-    "#sample_marble(box)\n",
+    "sample_marble(box)\n",
     "# 'black' OR 'white'"
    ]
   },
@@ -115,14 +166,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.552"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles \n",
-    "    # compute fraction of marbles of desired color \n",
-    "    return none"
+    "    # compute fraction of marbles of desired color\n",
+    "    color_count = 0\n",
+    "    draws = []\n",
+    "    for i in range(num_samples):\n",
+    "        draws.append(sample_marble(box))\n",
+    "        if draws[i] == color:\n",
+    "            color_count += 1\n",
+    "            \n",
+    "    fraction = color_count/num_samples\n",
+    "    return fraction\n",
+    "\n",
+    "probability_of_color('white', box, 1000)"
    ]
   },
   {
@@ -241,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
